# serial-rs

./: .appveyor.yml  .travis.yml  CHANGELOG.md  Cargo.toml  README.md  search-index.js
examples/: open_port.rs  probe_pins.rs  read_write.rs
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.Eq.js  trait.PartialEq.js
implementors/core/convert/: trait.From.js
implementors/core/default/: trait.Default.js
implementors/core/fmt/: trait.Debug.js  trait.Display.js
implementors/core/marker/: trait.Copy.js  trait.Send.js
implementors/core/ops/: trait.Drop.js
implementors/core/ops/drop/: trait.Drop.js
implementors/serial/: trait.SerialDevice.js
implementors/serial_core/: trait.SerialDevice.js  trait.SerialPort.js  trait.SerialPortSettings.js
implementors/std/error/: trait.Error.js
implementors/std/io/: trait.Read.js  trait.Write.js
implementors/std/sys/ext/io/: trait.AsRawFd.js
implementors/std/sys/imp/ext/io/: trait.AsRawFd.js  trait.AsRawHandle.js
serial/: Cargo.toml  README.md  SystemPort.t.html  enum.BaudRate.html  enum.CharSize.html  enum.ErrorKind.html  enum.FlowControl.html  enum.Parity.html  enum.StopBits.html  fn.open.html  index.html  sidebar-items.js  stability.html  stability.json  struct.Error.html  struct.PortSettings.html  trait.SerialDevice.html  trait.SerialPort.html  trait.SerialPortExt.html  trait.SerialPortSettings.html  type.Result.html  type.SystemPort.html
serial-core/: Cargo.toml  README.md
serial-core/src/: lib.rs
serial-unix/: Cargo.toml  README.md
serial-unix/examples/: poll.rs
serial-unix/src/: error.rs  lib.rs  poll.rs  tty.rs
serial-windows/: Cargo.toml  README.md
serial-windows/src/: com.rs  error.rs  ffi.rs  lib.rs
serial/examples/: open_port.rs  probe_pins.rs  read_write.rs
serial/posix/: index.html  sidebar-items.js  struct.TTYPort.html  struct.TTYSettings.html
serial/posix/tty/: struct.TTYPort.html  struct.TTYSettings.html
serial/prelude/: index.html
serial/src/: lib.rs
serial_core/: CharSize.t.html  FlowControl.t.html  PortSettings.t.html  SerialDevice.t.html  SerialPort.t.html  SerialPortSettings.t.html  StopBits.t.html  enum.BaudRate.html  enum.CharSize.html  enum.ErrorKind.html  enum.FlowControl.html  enum.Parity.html  enum.StopBits.html  index.html  sidebar-items.js  struct.Error.html  struct.PortSettings.html  trait.SerialDevice.html  trait.SerialPort.html  trait.SerialPortSettings.html  type.Result.html
serial_core/prelude/: index.html
serial_unix/: TTYPort.t.html  index.html  struct.TTYPort.html  struct.TTYSettings.html
serial_unix/tty/: TTYSettings.t.html  struct.TTYPort.html  struct.TTYSettings.html
serial_windows/: COMPort.t.html  COMSettings.t.html  index.html  sidebar-items.js  struct.COMPort.html  struct.COMSettings.html
serial_windows/com/: struct.COMPort.html  struct.COMSettings.html
src/: lib.rs
src/posix/: error.rs  mod.rs  poll.rs  tty.rs
src/serial/: lib.rs.html
src/serial/posix/: mod.rs.html  tty.rs.html
src/serial/src/: lib.rs.html
src/serial/src/posix/: mod.rs.html  tty.rs.html
src/serial_core/: lib.rs.html
src/serial_unix/: error.rs.html  lib.rs.html  poll.rs.html  tty.rs.html
src/serial_windows/: com.rs.html  error.rs.html  ffi.rs.html  lib.rs.html
src/windows/: com.rs  error.rs  ffi.rs  mod.rs
