[package]
name = "serial"
version = "0.3.3"
authors = ["David Cuddeback <david.cuddeback@gmail.com>"]
description = "Rust library for accessing serial ports."
homepage = "https://github.com/dcuddeback/serial-rs"
repository = "https://github.com/dcuddeback/serial-rs"
documentation = "https://dcuddeback.github.io/serial-rs/serial/"
license = "MIT"
readme = "README.md"
keywords = ["serial", "hardware", "system", "RS232"]

[dependencies]
libc = "0.2.1"

[target.aarch64-unknown-linux-gnu.dependencies]
termios = "0.2.2"
ioctl-rs = "0.1.5"

[target.arm-unknown-linux-gnueabi.dependencies]
termios = "0.2.2"
ioctl-rs = "0.1.5"

[target.arm-unknown-linux-gnueabihf.dependencies]
termios = "0.2.2"
ioctl-rs = "0.1.5"

[target.i686-apple-darwin.dependencies]
termios = "0.2.2"
ioctl-rs = "0.1.5"

[target.i686-unknown-linux-gnu.dependencies]
termios = "0.2.2"
ioctl-rs = "0.1.5"
libudev = "0.2.0"

[target.mips-unknown-linux-gnu.dependencies]
termios = "0.2.2"
ioctl-rs = "0.1.5"
libudev = "0.2.0"

[target.mipsel-unknown-linux-gnu.dependencies]
termios = "0.2.2"
ioctl-rs = "0.1.5"
libudev = "0.2.0"

[target.powerpc-unknown-linux-gnu.dependencies]
termios = "0.2.2"
ioctl-rs = "0.1.5"
libudev = "0.2.0"

[target.x86_64-apple-darwin.dependencies]
termios = "0.2.2"
ioctl-rs = "0.1.5"

[target.x86_64-unknown-dragonfly.dependencies]
termios = "0.2.2"
ioctl-rs = "0.1.5"

[target.x86_64-unknown-freebsd.dependencies]
termios = "0.2.2"
ioctl-rs = "0.1.5"

[target.x86_64-unknown-linux-gnu.dependencies]
termios = "0.2.2"
ioctl-rs = "0.1.5"
libudev = "0.2.0"

[target.x86_64-unknown-openbsd.dependencies]
termios = "0.2.2"
ioctl-rs = "0.1.5"
