[package]
name = "serial"
version = "0.3.4"
authors = ["David Cuddeback <david.cuddeback@gmail.com>"]
description = "Rust library for accessing serial ports."
homepage = "https://github.com/dcuddeback/serial-rs"
repository = "https://github.com/dcuddeback/serial-rs"
documentation = "https://dcuddeback.github.io/serial-rs/serial/"
license = "MIT"
readme = "README.md"
keywords = ["serial", "hardware", "system", "RS232"]

[dependencies]
libc = "0.2.1"

[target.'cfg(unix)'.dependencies]
termios = "0.2.2"
ioctl-rs = "0.1.5"

[target.x86_64-unknown-linux-musl.dependencies]
termios = "0.2.2"
ioctl-rs = "0.1.5"
