[package]
name = "serial-core"
version = "0.4.0"
authors = ["David Cuddeback <david.cuddeback@gmail.com>"]
description = "Rust abstractions for serial ports."
homepage = "https://github.com/dcuddeback/serial-rs"
repository = "https://github.com/dcuddeback/serial-rs"
documentation = "https://dcuddeback.github.io/serial-rs/serial-core/"
license = "MIT"
readme = "README.md"
keywords = ["serial", "hardware", "system", "RS232"]
categories = ["hardware-support"]

[dependencies]
libc = "0.2"
