[package]
name = "serial-unix"
version = "0.4.0"
authors = ["David Cuddeback <david.cuddeback@gmail.com>"]
description = "Serial port implementation for Unix."
homepage = "https://github.com/dcuddeback/serial-rs"
repository = "https://github.com/dcuddeback/serial-rs"
documentation = "https://dcuddeback.github.io/serial-rs/serial_unix/"
license = "MIT"
readme = "README.md"
keywords = ["serial", "hardware", "system", "RS232"]
categories = ["hardware-support", "os", "os::unix-apis"]

[dependencies]
serial-core = { version = "0.4", path = "../serial-core" }
libc = "0.2.1"
termios = "0.3"
ioctl-rs = "0.2"
