[package]
name = "serial-windows"
version = "0.4.0"
authors = ["David Cuddeback <david.cuddeback@gmail.com>"]
description = "Serial port implementation for Windows."
homepage = "https://github.com/dcuddeback/serial-rs"
repository = "https://github.com/dcuddeback/serial-rs"
documentation = "https://dcuddeback.github.io/serial-rs/serial-windows/"
license = "MIT"
readme = "README.md"
keywords = ["serial", "hardware", "system", "RS232"]

[dependencies]
serial-core = { version = "0.4", path = "../serial-core" }
libc = "0.2"
