[package]
name = "serial"
version = "0.4.0"
authors = ["David Cuddeback <david.cuddeback@gmail.com>"]
description = "Rust library for accessing serial ports."
homepage = "https://github.com/dcuddeback/serial-rs"
repository = "https://github.com/dcuddeback/serial-rs"
documentation = "https://dcuddeback.github.io/serial-rs/serial/"
license = "MIT"
readme = "README.md"
keywords = ["serial", "hardware", "system", "RS232"]

[dependencies]
serial-core = { path = "../serial-core" }

[target.'cfg(unix)'.dependencies]
serial-unix = { path = "../serial-unix" }

[target.'cfg(windows)'.dependencies]
serial-windows = { path = "../serial-windows" }
